Z-Index fixes

--- a/src/styles/_sections.scss
+++ b/src/styles/_sections.scss
@@ -175,29 +175,6 @@ section.artwork-slider {
       opacity: 1;
     }
   }
-
-  .slide-subheading {
-    h3 {
-      text-align: center;
-      margin: 0;
-    }
-  }
-  .slide-cta {
-    text-align: center;
-    margin-top: 1rem;
-    a {
-      cursor: pointer;
-      text-decoration: none;
-      color: white;
-      font-weight: 800;
-      background-color: #063a54;
-      padding: 0.25rem 0.5rem;
-      border-radius: 0.5rem;
-      &:hover {
-        background-color: rgb(4, 99, 4);
-      }
-    }
-  }
 }
 
 /* YouTube Playlist */
